# entropyx

./: .gitignore  AUTHORS  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
crates/entropyx-ast/: Cargo.toml
crates/entropyx-ast/src/: cpp_lang.rs  go_lang.rs  java_lang.rs  javascript_lang.rs  lib.rs  python_lang.rs  ruby_lang.rs  rust_lang.rs  typescript_lang.rs
crates/entropyx-cli/: Cargo.toml
crates/entropyx-cli/src/: cache.rs  lib.rs  main.rs
crates/entropyx-cli/tests/: calibrate.rs  explain.rs  scan.rs  schema.rs
crates/entropyx-core/: Cargo.toml
crates/entropyx-core/src/: describe.rs  determinism.rs  enrichment.rs  handle.rs  id.rs  lib.rs  metric.rs  summary.rs  vertex.rs
crates/entropyx-core/tests/: blame_youth.rs  calibrate.rs  classifier.rs  determinism.rs  file_metrics.rs  handle_stability.rs  hotspot.rs  incident_subject.rs  lineage.rs  ownership_split.rs  physics_primitives.rs  saturate.rs  schema_roundtrip.rs  test_path.rs
crates/entropyx-git/: Cargo.toml
crates/entropyx-git/src/: blame.rs  commit.rs  diff.rs  lib.rs  lineage.rs  repo.rs
crates/entropyx-git/tests/: blame.rs  diff.rs  open.rs  physics.rs
crates/entropyx-github/: Cargo.toml
crates/entropyx-github/src/: lib.rs
crates/entropyx-graph/: Cargo.toml
crates/entropyx-graph/src/: lib.rs
crates/entropyx-tq/: Cargo.toml
crates/entropyx-tq/src/: lib.rs  schema.rs
crates/entropyx-tq/tests/: schema_roundtrip.rs
docs/: index.html
docs/assets/: styles.css
