[package]
name = "entropyx-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
description = "CLI front-end for entropyx."

[lib]
name = "entropyx_cli"
path = "src/lib.rs"

[[bin]]
name = "entropyx"
path = "src/main.rs"

[dependencies]
entropyx-core = { path = "../entropyx-core", version = "0.1.0" }
entropyx-git = { path = "../entropyx-git", version = "0.1.0" }
entropyx-ast = { path = "../entropyx-ast", version = "0.1.0" }
entropyx-graph = { path = "../entropyx-graph", version = "0.1.0" }
entropyx-github = { path = "../entropyx-github", version = "0.1.0" }
entropyx-tq = { path = "../entropyx-tq", version = "0.1.0" }
serde_json = { workspace = true }
rayon = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
