[package]
name = "entropyx-graph"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
description = "Co-change / lineage / ownership graph primitives for entropyx."

[dependencies]
