[package]
name = "entropyx-tq"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
description = "tq1 — token-efficient summary protocol for entropyx (Summary, Dict, FileRow, Event, Enrichments, PullRequestRef)."

[dependencies]
entropyx-core = { path = "../entropyx-core" }
serde = { workspace = true }
serde_json = { workspace = true }
